--- a/tAoCR/index.html
+++ b/tAoCR/index.html
@@ -13,4 +13,5 @@
     <h1>Welcome to the Adventures of Captain Ratmon</h1>
     <button type="button" class="Button" onclick="play()">Play</button>
 </body>
+<script src="jQuery/jquery.js" type="text/javascript"></script>
 </html>
