--- a/tAoCR/intro.html
+++ b/tAoCR/intro.html
@@ -29,4 +29,6 @@
         </p>
         <button type="button" class="Button" onclick="nextFromIntro()">►</button>
     </div>
+</body>
+<script src="jQuery/jquery.js" type="text/javascript"></script>
 </html>
