--- a/tAoCR/testArea.html
+++ b/tAoCR/testArea.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>the Adventures of Captain Ratmon</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <h1>Welcome to the Adventures of Captain Ratmon</h1>
-    <button type="button" class="Button" onclick="play()">Play</button>
+    <h1>TEST AREA</h1>
     <form>
         <label for="cheatCodes">Enter cheat codes:</label>
         <textarea class="cheatCodes" name="cheatCodes"></textarea>
         <button type="submit">Submit</button>
     </form>      
-
-    <script src="jQuery/jquery.js" type="text/javascript"></script>
-    <script src="script.js"></script>
 </body>
+    <link rel="preload" href="script.js" as="script">
+    <script src="script.js"></script>
 </html>
