--- a/tAoCR/intro.html
+++ b/tAoCR/intro.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Intro</h1>
-    <div class="intro">
+    <div class="block_texts">
         <p>
             Once upon a time, there was a brave and heroic captain of the high seas named Ratmon. He and his crew had sailed many treacherous oceans and endured many thrilling adventures.
         </p>
@@ -27,7 +27,7 @@
         <p>
             Join Captain Ratmon on his epic adventure as he embarks in this thrilling and action-packed journey!
         </p>
-        <button type="button" class="Button" onclick="nextFromIntro()">►</button>
+        <div class="buttons-container"><button type="button" class="Button" onclick="_____P()">►</button></div>
     </div>
 </body>
 <script src="jQuery/jquery.js" type="text/javascript"></script>
