--- a/tAoCR/testArea.html
+++ b/tAoCR/testArea.html
@@ -5,21 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>The Adventures of Captain Ratmon</title>
+    <title>the Adventures of Captain Ratmon</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <h1>Welcome to the Adventures of Captain Ratmon</h1>
+    <h1>TEST AREA</h1>
     <form>
         <label for="cheatCodes">Enter cheat codes:</label>
         <textarea class="cheatCodes" name="cheatCodes"></textarea>
         <button type="submit">Submit</button>
-    </form>   
-
-    <div class="buttons-container">
-        <button type="button" class="Button" onclick="play()">Play</button>
-    </div>
-
-    <script src="jQuery/jquery.js" type="text/javascript"></script>
-    <script src="script.js"></script>
+    </form>      
 </body>
+    <link rel="preload" href="script.js" as="script">
+    <script src="script.js"></script>
 </html>
