--- a/__P_P_.html
+++ b/__P_P_.html
@@ -10,12 +10,13 @@
     <title>The Adventures of Captain Ratmon</title>
 </head>
 <body>
+    <h1>ONE DOOR</h1>
     <div class="block_texts">
-        <h1>You get treasure!</h1>
-        <p>Contact us at: <a href="mailto:softhareab@gmail.com">Send feedback via softhareab@gmail.com using the subject 'RATMON-FEEDBACK'</a></p>
-            <div class="buttons-container">
-                <button type="button" class="Button" onclick="end()">►</button>
-            </div>
+        <p>You fight the skeletons, and defeat them.</p>
+        <div class="buttons-container">
+            <button type="button" class="Button" onclick="win()">►</button>
+        </div>
     </div>
 </body>
+<script src="jQuery/jquery.js" type="text/javascript"></script>
 </html>
