--- a/___P__.html
+++ b/___P__.html
@@ -10,11 +10,13 @@
     <title>The Adventures of Captain Ratmon</title>
 </head>
 <body>
-    <h1>PULL</h1>
+    <h1>ONE DOOR</h1>
     <div class="block_texts">
-        <p>You pull your leg, and get to the other room which has treasure.</p>
+        <p>As you open the door, you see multiple skeletons rushing towards you.</p>
         <div class="buttons-container">
-            <button type="button" class="Button" onclick="win()">►</button>
+            <button type="button" class="Button" onclick="__P___()">Run</button>
+            <button type="button" class="Button" onclick="__P__P()">Accept demise</button>
+            <button type="button" class="Button" onclick="__P_P_()">Fight</button>
         </div>
     </div>
 </body>
