--- a/ded.html
+++ b/ded.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="block_texts">
-        <h1>You get treasure!</h1>
+        <h1>You dead as hell!</h1>
         <p>Contact us at: <a href="mailto:softhareab@gmail.com">Send feedback via softhareab@gmail.com using the subject 'RATMON-FEEDBACK'</a></p>
-            <div class="buttons-container">
-                <button type="button" class="Button" onclick="end()">►</button>
-            </div>
+        <div class="buttons-container">
+            <button type="button" class="Button" onclick="end()">►</button>
+        </div>
     </div>
 </body>
 </html>
