--- a/end.html
+++ b/end.html
@@ -11,10 +11,9 @@
 </head>
 <body>
     <div class="block_texts">
-        <h1>You get treasure!</h1>
-        <p>Contact us at: <a href="mailto:softhareab@gmail.com">Send feedback via softhareab@gmail.com using the subject 'RATMON-FEEDBACK'</a></p>
+        <h1>Thanks for playing this SHORT demo!</h1>
             <div class="buttons-container">
-                <button type="button" class="Button" onclick="end()">►</button>
+                <button type="button" class="Button" onclick="restart()">►</button>
             </div>
     </div>
 </body>
